--- a/src/index.html
+++ b/src/index.html
@@ -9,6 +9,10 @@
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
 <body>
-  <app-root></app-root>
+
+  <div class="mat-app-background basic-container">
+    <app-root>Loading...</app-root>
+  </div>
+
 </body>
 </html>
